# Modern-CPP-Design

./: .gitignore  CMakeLists.txt  Readme.md  conanfile.txt  main.cpp
.github/workflows/: cmake.yml  cmake_gtest.yml
frame/: NullType.hpp  custom_assert.hpp  typelists.hpp
math/: factorials.hpp  powers.hpp
